# mattplotlib

./: .gitignore  README.md  __init__.py  config.example.toml  config.py  demo.ipynb  matplotlib_plots.py  mattplotlib_demo.ipynb  pyproject.toml  style.py
examples/: models_data.csv
mattplotlib/: __init__.py  config.py  matplotlib_plots.py  plotly_plots.py  seaborn_plots.py
mattplotlib/styles/: mattplotlib.mplstyle
styles/: mattplotlib.mplstyle
