[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mattplotlib"
version = "0.1.0"
description = "High-level plotting helpers with consistent styling across Matplotlib, Seaborn, and Plotly."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Matt" }]
license = { text = "MIT" }
dependencies = [
  "matplotlib>=3.5",
  "numpy>=1.21",
  "matplotlib-venn>=0.11",
  "seaborn>=0.12",
]

[project.optional-dependencies]
plotly = ["plotly>=5.0"]

[tool.setuptools.packages.find]
include = ["mattplotlib*"]

[tool.setuptools.package-data]
# Ensure the style file is included when installed
mattplotlib = ["styles/mattplotlib.mplstyle"]
